--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,1 @@
-# Magic8-Companion – Python requirements
-
-# Pinned on 2025-06-07 (ship-fast MVP)
-
-# Core orchestration / broker
-
-ib_async==1.0.3  # IBKR async client
-ibapi>=9.81.1.post1  # Official IB Python API fallback
-
-# Greeks & gamma
-
-py_vollib_vectorized==0.1.1  # Fast vector Greeks
-spx-gamma-exposure @ git+https://github.com/jensolson/SPX-Gamma-Exposure.git@master  # Dealer gamma tools
-
-# Strategy & execution helpers
-
-zero-dte-trader @ git+https://github.com/aicheung/0dte-trader.git@master  # Order builder
-optopsy==2.0.1  # Back‑testing
-opstrat==0.1.7  # Pay‑off plots
-
-# Technical indicators & TA helpers
-
-pandas-ta==0.3.14b
-
-# Data & maths stack
-
-pandas>=2.1.0
-numpy>=1.26.0
-scipy>=1.10.0
-numba>=0.58.0
-
-# Infra / I/O
-
-redis>=5.0.0
-asyncpg>=0.29.0  # TimescaleDB / Postgres driver
-requests>=2.32.0
-python-dotenv>=1.0.0
-prometheus-client>=0.19.0
-streamlit>=1.35.0
-yfinance>=0.2.37
-holidays>=0.33
-
-# (Optional) GPU Greeks – enable when USE_GPU=true
-
-# optiongreeksgpu>=0.2.0
+# Magic8-Companion – Python Requirements\n# Minimal dependencies for companion system (not full clone)\n# Updated: 2025-06-07\n\n# Core Dependencies\nib_async==1.0.3                    # IB API for position tracking\nrequests>=2.32.0                   # HTTP client for Magic8 integration\npython-dotenv>=1.0.0               # Environment configuration\npydantic>=2.5.0                    # Configuration management\npydantic-settings>=2.1.0           # Settings from environment\n\n# Scheduling & Async\nAPScheduler>=3.10.0                 # Scheduled checkpoint execution\npytz>=2023.3                       # Timezone handling\naiofiles>=23.0.0                   # Async file operations\n\n# Data Processing (Lightweight)\npandas>=2.1.0                      # Data manipulation\nnumpy>=1.26.0                      # Numerical operations\n\n# Discord Integration\ndiscord.py>=2.3.0                  # Discord bot/webhook support\n# Alternative: Simple webhook approach\n# requests (already included above)\n\n# Database (SQLite built into Python)\n# No additional dependencies needed for SQLite\n\n# Optional: Enhanced Magic8 Integration\nwebsockets>=12.0                   # WebSocket client for real-time Magic8 feed\naiohttp>=3.9.0                     # Async HTTP client\n\n# Development & Testing\npytest>=7.4.0                      # Testing framework\npytest-asyncio>=0.23.0             # Async test support\npytest-mock>=3.12.0                # Mocking for tests\n\n# Monitoring & Logging\nprometheus-client>=0.19.0           # Metrics export (optional)\n\n# Utilities\nclick>=8.1.0                       # CLI interface\nrich>=13.7.0                       # Better terminal output\n\n# Note: Removed heavy dependencies from Magic8Clone:\n# - py_vollib_vectorized (Magic8 provides Greeks)\n# - spx-gamma-exposure (Magic8 provides GEX)\n# - zero-dte-trader (We don't form combos, just select types)\n# - TimescaleDB/Redis (Using SQLite for simplicity)\n# - GPU libraries (Not needed for companion system)\n
