--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,89 @@
-# Magic8-Companion – Python Requirements\n# Minimal dependencies for companion system (not full clone)\n# Updated: 2025-06-07\n\n# Core Dependencies\nib_async==1.0.3                    # IB API for position tracking\nrequests>=2.32.0                   # HTTP client for Magic8 integration\npython-dotenv>=1.0.0               # Environment configuration\npydantic>=2.5.0                    # Configuration management\npydantic-settings>=2.1.0           # Settings from environment\n\n# Scheduling & Async\nAPScheduler>=3.10.0                 # Scheduled checkpoint execution\npytz>=2023.3                       # Timezone handling\naiofiles>=23.0.0                   # Async file operations\n\n# Data Processing (Lightweight)\npandas>=2.1.0                      # Data manipulation\nnumpy>=1.26.0                      # Numerical operations\n\n# Discord Integration\ndiscord.py>=2.3.0                  # Discord bot/webhook support\n# Alternative: Simple webhook approach\n# requests (already included above)\n\n# Database (SQLite built into Python)\n# No additional dependencies needed for SQLite\n\n# Optional: Enhanced Magic8 Integration\nwebsockets>=12.0                   # WebSocket client for real-time Magic8 feed\naiohttp>=3.9.0                     # Async HTTP client\n\n# Development & Testing\npytest>=7.4.0                      # Testing framework\npytest-asyncio>=0.23.0             # Async test support\npytest-mock>=3.12.0                # Mocking for tests\n\n# Monitoring & Logging\nprometheus-client>=0.19.0           # Metrics export (optional)\n\n# Utilities\nclick>=8.1.0                       # CLI interface\nrich>=13.7.0                       # Better terminal output\n\n# Note: Removed heavy dependencies from Magic8Clone:\n# - py_vollib_vectorized (Magic8 provides Greeks)\n# - spx-gamma-exposure (Magic8 provides GEX)\n# - zero-dte-trader (We don't form combos, just select types)\n# - TimescaleDB/Redis (Using SQLite for simplicity)\n# - GPU libraries (Not needed for companion system)\n
+# Magic8-Companion – Python Requirements
+# Focused dependencies for combo type selection + risk management
+# Updated: 2025-06-07
+
+# ==========================================
+# CORE DEPENDENCIES
+# ==========================================
+
+# IB Integration (Essential)
+ib_async==1.0.3                    # IB API for position tracking and option data
+requests>=2.32.0                   # HTTP client for Magic8 integration
+python-dotenv>=1.0.0               # Environment configuration
+pydantic>=2.5.0                    # Configuration management
+pydantic-settings>=2.1.0           # Settings from environment
+
+# Scheduling & Async (Essential)
+APScheduler>=3.10.0                 # Scheduled checkpoint execution
+pytz>=2023.3                       # Timezone handling
+aiofiles>=23.0.0                   # Async file operations
+
+# ==========================================
+# MARKET ANALYSIS (Lightweight)
+# ==========================================
+# Note: Magic8-Companion needs basic market analysis to score combo types
+# But much simpler than full Magic8Clone system
+
+# Greeks & IV Calculation (For combo type scoring)
+py_vollib_vectorized==0.1.1        # Fast Greeks calculation for IV/volatility analysis
+numpy>=1.26.0                      # Numerical operations
+pandas>=2.1.0                      # Data manipulation
+
+# Simplified Gamma Exposure (For pinning analysis)
+# Note: Only using basic GEX functions, not full complex analysis
+spx-gamma-exposure @ git+https://github.com/jensolson/SPX-Gamma-Exposure.git@master
+
+# ==========================================
+# ALERTS & INTEGRATION
+# ==========================================
+
+# Discord Integration
+discord.py>=2.3.0                  # Discord bot/webhook support
+# Alternative: Simple webhook approach using requests (already included)
+
+# Optional: Enhanced Magic8 Integration
+websockets>=12.0                   # WebSocket client for real-time Magic8 feed
+aiohttp>=3.9.0                     # Async HTTP client
+
+# ==========================================
+# DEVELOPMENT & TESTING
+# ==========================================
+
+pytest>=7.4.0                      # Testing framework
+pytest-asyncio>=0.23.0             # Async test support
+pytest-mock>=3.12.0                # Mocking for tests
+
+# ==========================================
+# MONITORING & UTILITIES
+# ==========================================
+
+prometheus-client>=0.19.0          # Metrics export (optional)
+click>=8.1.0                       # CLI interface
+rich>=13.7.0                       # Better terminal output
+
+# ==========================================
+# WHAT'S EXCLUDED (vs Magic8Clone)
+# ==========================================
+# These are NOT needed for Magic8-Companion:
+# 
+# ❌ zero-dte-trader (we don't form combos, just select types)
+# ❌ TimescaleDB/asyncpg (using SQLite for simplicity)
+# ❌ Redis (not needed for companion scale)
+# ❌ Heavy visualization libraries (streamlit, opstrat)
+# ❌ GPU libraries (OptionGreeksGPU - not needed for lightweight analysis)
+# ❌ Complex backtesting frameworks (optopsy)
+# ❌ Heavy TA libraries (pandas-ta)
+#
+# Magic8-Companion uses these libraries minimally:
+# ✅ py_vollib_vectorized: Only for basic IV/Greeks (not full option chain processing)
+# ✅ spx-gamma-exposure: Only for basic GEX analysis (not complex wall calculations)  
+# ✅ ib_async: Only for position tracking and basic option data (not full chain processing)
+
+# ==========================================
+# ARCHITECTURE NOTES
+# ==========================================
+# Magic8-Companion Approach:
+# 1. Magic8 provides: Trend, range, specific trade recommendations
+# 2. Companion analyzes: IV environment, basic volatility, simple GEX
+# 3. Combines both: To score which combo TYPE is most favorable
+# 4. Much lighter than full Magic8Clone system
