Update .env.example with all configuration options including live data settings

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,34 @@
-# Magic8-Companion configuration
-MAGIC8_SOURCE=file
-MAGIC8_FILE_PATH=data/magic8_output.json
-MAGIC8_URL=
-MAGIC8_POLL_INTERVAL=30
+# Magic8-Companion Configuration
+# Copy this to .env and modify as needed
 
-IB_HOST=127.0.0.1
-IB_PORT=7497
-IB_CLIENT_ID=2
+# Output file path for recommendations
+M8C_OUTPUT_FILE_PATH=data/recommendations.json
 
-DISCORD_WEBHOOK=
+# Supported trading symbols
+M8C_SUPPORTED_SYMBOLS=["SPX", "SPY", "QQQ", "RUT"]
 
-MAX_DAILY_LOSS=5000
-MAX_POSITION_LOSS=2000
+# Checkpoint times (Eastern Time, 24-hour format)
+M8C_CHECKPOINT_TIMES=["10:30", "11:00", "12:30", "14:45"]
 
-MIN_RECOMMENDATION_SCORE=70
-MIN_SCORE_GAP=15
+# Scoring thresholds
+M8C_MIN_RECOMMENDATION_SCORE=70
+M8C_MIN_SCORE_GAP=15
+
+# Market analysis settings
+M8C_USE_MOCK_DATA=true  # Set to false for live data
+M8C_MOCK_IV_PERCENTILE=65.0
+M8C_MOCK_EXPECTED_RANGE_PCT=0.008
+
+# Live data settings (when USE_MOCK_DATA=false)
+M8C_MARKET_DATA_PROVIDER=yahoo  # yahoo, ib, or polygon
+
+# Interactive Brokers settings (if using IB provider)
+M8C_IB_HOST=127.0.0.1
+M8C_IB_PORT=7497
+M8C_IB_CLIENT_ID=2
+
+# Polygon API settings (if using Polygon provider)
+M8C_POLYGON_API_KEY=
+
+# Time zone
+M8C_TIMEZONE=America/New_York
