--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,24 @@ numpy==1.26.4
 
 # Interactive Brokers
 ib_async==1.0.1
+
+# === ENHANCED INDICATORS ===
+
+# Greeks Calculations (Production-ready from PyPI)
+py-vollib-vectorized==0.1.3
+py_vollib==1.0.1  # Base library for fallback
+
+# Additional Data Processing
+scipy==1.14.1  # For statistical calculations
+scikit-learn==1.5.2  # For data analysis
+
+# Async HTTP for future API calls
+aiohttp==3.11.11
+requests==2.32.3
+
+# Performance & Caching
+joblib==1.4.2  # For caching expensive calculations
+numba==0.60.0  # For performance optimization (optional)
+
+# Data Validation
+marshmallow==3.23.2  # For data schema validation
