Update .env.example with IBKR configuration variables

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,30 @@ M8C_POLYGON_API_KEY=
 
 # Time zone
 M8C_TIMEZONE=America/New_York
+
+# === ENHANCED INDICATORS CONFIGURATION ===
+
+# Enable enhanced indicators
+ENABLE_GREEKS=true              # Enable Greeks calculations
+ENABLE_ADVANCED_GEX=true        # Enable Gamma Exposure analysis
+ENABLE_VOLUME_ANALYSIS=true     # Enable Volume/OI analysis
+
+# === INTERACTIVE BROKERS DATA SOURCE ===
+
+# Use IBKR as primary data source (overrides M8C_MARKET_DATA_PROVIDER)
+USE_IBKR_DATA=false             # Set to true to use IBKR instead of Yahoo
+
+# IBKR Connection Settings
+IBKR_HOST=127.0.0.1            # TWS/IB Gateway host
+IBKR_PORT=7497                 # 7497 for paper trading, 7496 for live
+IBKR_CLIENT_ID=1               # Unique client ID for this connection
+
+# IBKR Fallback Settings
+IBKR_FALLBACK_TO_YAHOO=true    # Fall back to Yahoo if IBKR fails
+
+# IBKR Notes:
+# 1. Ensure TWS or IB Gateway is running before starting
+# 2. Enable API connections in TWS/Gateway settings
+# 3. Check firewall settings allow connection to IBKR_PORT
+# 4. For live trading, use port 7496 and ensure proper permissions
+# 5. IBKR provides real-time data with accurate Greeks from exchange
