Update .env.example to add M8C_ prefix to all variables for consistency with Pydantic settings

--- a/.env.example
+++ b/.env.example
@@ -36,22 +36,62 @@ M8C_TIMEZONE=America/New_York
 # === ENHANCED INDICATORS CONFIGURATION ===
 
 # Enable enhanced indicators
-ENABLE_GREEKS=true              # Enable Greeks calculations
-ENABLE_ADVANCED_GEX=true        # Enable Gamma Exposure analysis
-ENABLE_VOLUME_ANALYSIS=true     # Enable Volume/OI analysis
+M8C_ENABLE_GREEKS=true              # Enable Greeks calculations
+M8C_ENABLE_ADVANCED_GEX=true        # Enable Gamma Exposure analysis
+M8C_ENABLE_VOLUME_ANALYSIS=true     # Enable Volume/OI analysis
 
 # === INTERACTIVE BROKERS DATA SOURCE ===
 
 # Use IBKR as primary data source (overrides M8C_MARKET_DATA_PROVIDER)
-USE_IBKR_DATA=false             # Set to true to use IBKR instead of Yahoo
+M8C_USE_IBKR_DATA=true             # Set to true to use IBKR instead of Yahoo
 
 # IBKR Connection Settings
-IBKR_HOST=127.0.0.1            # TWS/IB Gateway host
-IBKR_PORT=7497                 # 7497 for paper trading, 7496 for live
-IBKR_CLIENT_ID=1               # Unique client ID for this connection
+M8C_IBKR_HOST=127.0.0.1            # TWS/IB Gateway host
+M8C_IBKR_PORT=7497                 # 7497 for paper trading, 7496 for live
+M8C_IBKR_CLIENT_ID=1               # Unique client ID for this connection
 
 # IBKR Fallback Settings
-IBKR_FALLBACK_TO_YAHOO=true    # Fall back to Yahoo if IBKR fails
+M8C_IBKR_FALLBACK_TO_YAHOO=true    # Fall back to Yahoo if IBKR fails
+
+# === LOGGING CONFIGURATION ===
+
+M8C_LOG_LEVEL=INFO
+M8C_LOG_TO_FILE=true
+M8C_LOG_FILE_PATH=logs/magic8_companion.log
+M8C_LOG_FILE_MAX_SIZE=10485760      # 10MB
+M8C_LOG_FILE_BACKUP_COUNT=5
+
+# === PERFORMANCE CONFIGURATION ===
+
+M8C_ENABLE_CACHING=true
+M8C_CACHE_EXPIRY_MINUTES=5
+M8C_ENABLE_PARALLEL_PROCESSING=true
+M8C_MAX_WORKERS=4
+
+# === EMAIL CONFIGURATION ===
+
+M8C_SMTP_PORT=587
+
+# === GREEKS CONFIGURATION ===
+
+M8C_GREEKS_RISK_FREE_RATE=0.053    # Current risk-free rate
+M8C_GREEKS_DIVIDEND_YIELD=0.012    # SPX dividend yield
+
+# === GAMMA EXPOSURE (GEX) CONFIGURATION ===
+
+M8C_GEX_0DTE_MULTIPLIER=8.0        # Multiplier for 0DTE gamma
+M8C_GEX_SMOOTHING_WINDOW=5         # Strike smoothing window
+
+# === VOLUME ANALYSIS CONFIGURATION ===
+
+M8C_VOLUME_ANOMALY_THRESHOLD=2.5   # Standard deviations for anomaly
+M8C_VOLUME_LIQUIDITY_MIN_OI=100    # Minimum open interest
+
+# === STRATEGY THRESHOLDS ===
+
+M8C_BUTTERFLY_IV_THRESHOLD=40      # Minimum IV for butterfly
+M8C_IRON_CONDOR_IV_RANGE=[30, 80] # IV range for iron condor
+M8C_VERTICAL_MIN_IV=50             # Minimum IV for vertical
 
 # IBKR Notes:
 # 1. Ensure TWS or IB Gateway is running before starting
