Add Discord webhook configuration

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,9 @@ M8C_IB_CLIENT_ID=2
 # Polygon API settings (if using Polygon provider)
 M8C_POLYGON_API_KEY=
 
+# Discord webhook for alerts
+M8C_DISCORD_WEBHOOK=
+
 # Time zone
 M8C_TIMEZONE=America/New_York
 
