Update .env.example for unified configuration system
- Adds M8C_SYSTEM_COMPLEXITY setting (simple/standard/enhanced)
- Documents complexity mode behaviors and features
- Maintains all existing settings with clearer organization
- Adds usage guide for different complexity modes
- Shows which features are mode-dependent
- Provides production recommendations

This completes the unified configuration for all system modes.

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,33 @@
-# Magic8-Companion Configuration
+# Magic8-Companion Unified Configuration
 # Copy this to .env and modify as needed
+
+# === SYSTEM SETTINGS ===
+
+# System complexity mode: simple, standard, enhanced
+M8C_SYSTEM_COMPLEXITY=standard
 
 # Output file path for recommendations
 M8C_OUTPUT_FILE_PATH=data/recommendations.json
 
 # Supported trading symbols
-M8C_SUPPORTED_SYMBOLS=["SPX", "SPY", "QQQ", "RUT"]
+M8C_SUPPORTED_SYMBOLS=["SPX", "RUT"] #"SPY", "QQQ", 
 
 # Checkpoint times (Eastern Time, 24-hour format)
-M8C_CHECKPOINT_TIMES=["10:30", "11:00", "12:30", "14:45"]
+# Note: Simple mode uses fewer checkpoints automatically
+M8C_CHECKPOINT_TIMES=["10:00", "10:30", "11:00", "11:30", "12:00", "12:15", "12:30", "13:00", "13:05", "13:45", "14:00", "14:30"]
 
-# Scoring thresholds
-M8C_MIN_RECOMMENDATION_SCORE=70
-M8C_MIN_SCORE_GAP=15
+# Scoring thresholds - MADE MORE LENIENT
+M8C_MIN_RECOMMENDATION_SCORE=60
+M8C_MIN_SCORE_GAP=10
+
+# === MARKET DATA SETTINGS ===
 
 # Market analysis settings
-M8C_USE_MOCK_DATA=true  # Set to false for live data
+M8C_USE_MOCK_DATA=false  # Set to true for testing (simple mode uses mock data automatically)
 M8C_MOCK_IV_PERCENTILE=65.0
 M8C_MOCK_EXPECTED_RANGE_PCT=0.008
 
-# Live data settings (when USE_MOCK_DATA=false)
+# Live data settings
 M8C_MARKET_DATA_PROVIDER=yahoo  # yahoo, ib, or polygon
 
 # Interactive Brokers settings (if using IB provider)
@@ -30,15 +38,12 @@ M8C_IB_CLIENT_ID=2
 # Polygon API settings (if using Polygon provider)
 M8C_POLYGON_API_KEY=
 
-# Discord webhook for alerts
-M8C_DISCORD_WEBHOOK=
-
 # Time zone
 M8C_TIMEZONE=America/New_York
 
-# === ENHANCED INDICATORS CONFIGURATION ===
+# === ENHANCED INDICATORS CONFIGURATION (Enhanced Mode Only) ===
 
-# Enable enhanced indicators
+# Enable enhanced indicators (only used in enhanced mode)
 M8C_ENABLE_GREEKS=true              # Enable Greeks calculations
 M8C_ENABLE_ADVANCED_GEX=true        # Enable Gamma Exposure analysis
 M8C_ENABLE_VOLUME_ANALYSIS=true     # Enable Volume/OI analysis
@@ -51,7 +56,7 @@ M8C_USE_IBKR_DATA=true             # Set to true to use IBKR instead of Yahoo
 # IBKR Connection Settings
 M8C_IBKR_HOST=127.0.0.1            # TWS/IB Gateway host
 M8C_IBKR_PORT=7497                 # 7497 for paper trading, 7496 for live
-M8C_IBKR_CLIENT_ID=1               # Unique client ID for this connection
+M8C_IBKR_CLIENT_ID=111               # Unique client ID for this connection
 
 # IBKR Fallback Settings
 M8C_IBKR_FALLBACK_TO_YAHOO=true    # Fall back to Yahoo if IBKR fails
@@ -75,27 +80,57 @@ M8C_MAX_WORKERS=4
 
 M8C_SMTP_PORT=587
 
-# === GREEKS CONFIGURATION ===
+# === GREEKS CONFIGURATION (Enhanced Mode Only) ===
 
 M8C_GREEKS_RISK_FREE_RATE=0.053    # Current risk-free rate
 M8C_GREEKS_DIVIDEND_YIELD=0.012    # SPX dividend yield
 
-# === GAMMA EXPOSURE (GEX) CONFIGURATION ===
+# === GAMMA EXPOSURE (GEX) CONFIGURATION (Enhanced Mode Only) ===
 
 M8C_GEX_0DTE_MULTIPLIER=8.0        # Multiplier for 0DTE gamma
 M8C_GEX_SMOOTHING_WINDOW=5         # Strike smoothing window
 
-# === VOLUME ANALYSIS CONFIGURATION ===
+# === VOLUME ANALYSIS CONFIGURATION (Enhanced Mode Only) ===
 
 M8C_VOLUME_ANOMALY_THRESHOLD=2.5   # Standard deviations for anomaly
 M8C_VOLUME_LIQUIDITY_MIN_OI=100    # Minimum open interest
 
-# === STRATEGY THRESHOLDS ===
+# === STRATEGY THRESHOLDS - MADE MORE LENIENT ===
 
-M8C_BUTTERFLY_IV_THRESHOLD=40      # Minimum IV for butterfly
-M8C_IRON_CONDOR_IV_RANGE=[30, 80] # IV range for iron condor
-M8C_VERTICAL_MIN_IV=50             # Minimum IV for vertical
+M8C_BUTTERFLY_IV_THRESHOLD=50      # Up from 40 - Minimum IV for butterfly
+M8C_IRON_CONDOR_IV_RANGE=[25, 85] # Expanded from [30, 80] - IV range for iron condor
+M8C_VERTICAL_MIN_IV=40             # Down from 50 - Minimum IV for vertical
 
+# ===== COMPLEXITY MODE GUIDE =====
+#
+# SIMPLE MODE:
+# - Uses mock data automatically
+# - Fewer checkpoint times
+# - Basic scoring logic
+# - No enhanced indicators
+# - Minimal features for testing
+#
+# STANDARD MODE (RECOMMENDED FOR PRODUCTION):
+# - Full feature set
+# - Live market data
+# - Research-based scoring
+# - All checkpoints
+# - Production-ready
+#
+# ENHANCED MODE:
+# - Everything in Standard
+# - Plus Greeks calculations
+# - Plus Gamma Exposure analysis  
+# - Plus Volume/OI analytics
+# - Requires additional dependencies
+#
+# ===== USAGE =====
+# 
+# Set M8C_SYSTEM_COMPLEXITY to:
+# - "simple" for basic testing
+# - "standard" for production (recommended)
+# - "enhanced" for advanced analysis
+#
 # IBKR Notes:
 # 1. Ensure TWS or IB Gateway is running before starting
 # 2. Enable API connections in TWS/Gateway settings
