--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,14 @@ M8C_ENABLE_GREEKS=true              # Enable Greeks calculations
 M8C_ENABLE_ADVANCED_GEX=true        # Enable Gamma Exposure analysis
 M8C_ENABLE_VOLUME_ANALYSIS=true     # Enable Volume/OI analysis
 
+# === MLOPTIONTRADING GAMMA INTEGRATION ===
+
+# Enable enhanced gamma analysis from MLOptionTrading
+M8C_ENABLE_ENHANCED_GEX=true        # Enable MLOptionTrading integration
+M8C_ML_OPTION_TRADING_PATH=../MLOptionTrading  # Path to MLOptionTrading repo
+M8C_GAMMA_INTEGRATION_MODE=file     # 'file' or 'integrated'
+M8C_GAMMA_MAX_AGE_MINUTES=5         # Maximum age for gamma data (minutes)
+
 # === INTERACTIVE BROKERS DATA SOURCE ===
 
 # Use IBKR as primary data source (overrides M8C_MARKET_DATA_PROVIDER)
@@ -122,7 +130,16 @@ M8C_VERTICAL_MIN_IV=40             # Down from 50 - Minimum IV for vertical
 # - Plus Greeks calculations
 # - Plus Gamma Exposure analysis  
 # - Plus Volume/OI analytics
+# - Plus MLOptionTrading integration (if enabled)
 # - Requires additional dependencies
+#
+# ===== MLOPTIONTRADING INTEGRATION =====
+#
+# When M8C_ENABLE_ENHANCED_GEX=true:
+# - Reads gamma adjustments from MLOptionTrading/data/gamma_adjustments.json
+# - Applies sophisticated gamma-based score adjustments
+# - Requires MLOptionTrading to be running (see MLOPTIONTRADING_INTEGRATION.md)
+# - Falls back to standard GEX if MLOptionTrading data unavailable
 #
 # ===== USAGE =====
 # 
