Add example .env configuration with gamma integration settings

--- a/.env.example
+++ b/.env.example
@@ -1,156 +1,41 @@
-# Magic8-Companion Unified Configuration
-# Copy this to .env and modify as needed
+# Magic8-Companion Environment Configuration
+# Copy this file to .env and update with your settings
 
-# === SYSTEM SETTINGS ===
-
-# System complexity mode: simple, standard, enhanced
+# === CORE SYSTEM SETTINGS ===
 M8C_SYSTEM_COMPLEXITY=standard
 
-# Output file path for recommendations
-M8C_OUTPUT_FILE_PATH=data/recommendations.json
+# === GAMMA INTEGRATION SETTINGS (for MLOptionTrading) ===
+# Enable enhanced gamma analysis from MLOptionTrading
+M8C_ENABLE_ENHANCED_GEX=true
 
-# Supported trading symbols
-M8C_SUPPORTED_SYMBOLS=["SPX", "RUT"] #"SPY", "QQQ", 
+# Path to MLOptionTrading repository (relative or absolute)
+M8C_ML_OPTION_TRADING_PATH=../MLOptionTrading
 
-# Checkpoint times (Eastern Time, 24-hour format)
-# Note: Simple mode uses fewer checkpoints automatically
-M8C_CHECKPOINT_TIMES=["10:00", "10:30", "11:00", "11:30", "12:00", "12:15", "12:30", "13:00", "13:05", "13:45", "14:00", "14:30"]
+# Integration mode: file (reads from gamma_adjustments.json) or api (future)
+M8C_GAMMA_INTEGRATION_MODE=file
 
-# Scoring thresholds - MADE MORE LENIENT
-M8C_MIN_RECOMMENDATION_SCORE=60
-M8C_MIN_SCORE_GAP=10
+# Maximum age for gamma data before refresh (in minutes)
+M8C_GAMMA_MAX_AGE_MINUTES=5
 
 # === MARKET DATA SETTINGS ===
+M8C_MARKET_DATA_PROVIDER=yahoo
+M8C_USE_MOCK_DATA=false
 
-# Market analysis settings
-M8C_USE_MOCK_DATA=false  # Set to true for testing (simple mode uses mock data automatically)
-M8C_MOCK_IV_PERCENTILE=65.0
-M8C_MOCK_EXPECTED_RANGE_PCT=0.008
-
-# Live data settings
-M8C_MARKET_DATA_PROVIDER=yahoo  # yahoo, ib, or polygon
-
-# Interactive Brokers settings (if using IB provider)
+# === INTERACTIVE BROKERS SETTINGS ===
 M8C_IB_HOST=127.0.0.1
 M8C_IB_PORT=7497
 M8C_IB_CLIENT_ID=2
 
-# Polygon API settings (if using Polygon provider)
-M8C_POLYGON_API_KEY=
-
-# Time zone
-M8C_TIMEZONE=America/New_York
-
-# === ENHANCED INDICATORS CONFIGURATION (Enhanced Mode Only) ===
-
-# Enable enhanced indicators (only used in enhanced mode)
-M8C_ENABLE_GREEKS=true              # Enable Greeks calculations
-M8C_ENABLE_ADVANCED_GEX=true        # Enable Gamma Exposure analysis
-M8C_ENABLE_VOLUME_ANALYSIS=true     # Enable Volume/OI analysis
-
-# === MLOPTIONTRADING GAMMA INTEGRATION ===
-
-# Enable enhanced gamma analysis from MLOptionTrading
-M8C_ENABLE_ENHANCED_GEX=true        # Enable MLOptionTrading integration
-M8C_ML_OPTION_TRADING_PATH=../MLOptionTrading  # Path to MLOptionTrading repo
-M8C_GAMMA_INTEGRATION_MODE=file     # 'file' or 'integrated'
-M8C_GAMMA_MAX_AGE_MINUTES=5         # Maximum age for gamma data (minutes)
-
-# === INTERACTIVE BROKERS DATA SOURCE ===
-
-# Use IBKR as primary data source (overrides M8C_MARKET_DATA_PROVIDER)
-M8C_USE_IBKR_DATA=true             # Set to true to use IBKR instead of Yahoo
-
-# IBKR Connection Settings
-M8C_IBKR_HOST=127.0.0.1            # TWS/IB Gateway host
-M8C_IBKR_PORT=7497                 # 7497 for paper trading, 7496 for live
-M8C_IBKR_CLIENT_ID=111               # Unique client ID for this connection
-
-# IBKR Fallback Settings
-M8C_IBKR_FALLBACK_TO_YAHOO=true    # Fall back to Yahoo if IBKR fails
-
 # === LOGGING CONFIGURATION ===
-
 M8C_LOG_LEVEL=INFO
 M8C_LOG_TO_FILE=true
-M8C_LOG_FILE_PATH=logs/magic8_companion.log
-M8C_LOG_FILE_MAX_SIZE=10485760      # 10MB
-M8C_LOG_FILE_BACKUP_COUNT=5
 
-# === PERFORMANCE CONFIGURATION ===
-
+# === PERFORMANCE SETTINGS ===
 M8C_ENABLE_CACHING=true
 M8C_CACHE_EXPIRY_MINUTES=5
-M8C_ENABLE_PARALLEL_PROCESSING=true
-M8C_MAX_WORKERS=4
 
-# === EMAIL CONFIGURATION ===
+# === API KEYS (if using Polygon) ===
+# M8C_POLYGON_API_KEY=your_api_key_here
 
-M8C_SMTP_PORT=587
-
-# === GREEKS CONFIGURATION (Enhanced Mode Only) ===
-
-M8C_GREEKS_RISK_FREE_RATE=0.053    # Current risk-free rate
-M8C_GREEKS_DIVIDEND_YIELD=0.012    # SPX dividend yield
-
-# === GAMMA EXPOSURE (GEX) CONFIGURATION (Enhanced Mode Only) ===
-
-M8C_GEX_0DTE_MULTIPLIER=8.0        # Multiplier for 0DTE gamma
-M8C_GEX_SMOOTHING_WINDOW=5         # Strike smoothing window
-
-# === VOLUME ANALYSIS CONFIGURATION (Enhanced Mode Only) ===
-
-M8C_VOLUME_ANOMALY_THRESHOLD=2.5   # Standard deviations for anomaly
-M8C_VOLUME_LIQUIDITY_MIN_OI=100    # Minimum open interest
-
-# === STRATEGY THRESHOLDS - MADE MORE LENIENT ===
-
-M8C_BUTTERFLY_IV_THRESHOLD=50      # Up from 40 - Minimum IV for butterfly
-M8C_IRON_CONDOR_IV_RANGE=[25, 85] # Expanded from [30, 80] - IV range for iron condor
-M8C_VERTICAL_MIN_IV=40             # Down from 50 - Minimum IV for vertical
-
-# ===== COMPLEXITY MODE GUIDE =====
-#
-# SIMPLE MODE:
-# - Uses mock data automatically
-# - Fewer checkpoint times
-# - Basic scoring logic
-# - No enhanced indicators
-# - Minimal features for testing
-#
-# STANDARD MODE (RECOMMENDED FOR PRODUCTION):
-# - Full feature set
-# - Live market data
-# - Research-based scoring
-# - All checkpoints
-# - Production-ready
-#
-# ENHANCED MODE:
-# - Everything in Standard
-# - Plus Greeks calculations
-# - Plus Gamma Exposure analysis  
-# - Plus Volume/OI analytics
-# - Plus MLOptionTrading integration (if enabled)
-# - Requires additional dependencies
-#
-# ===== MLOPTIONTRADING INTEGRATION =====
-#
-# When M8C_ENABLE_ENHANCED_GEX=true:
-# - Reads gamma adjustments from MLOptionTrading/data/gamma_adjustments.json
-# - Applies sophisticated gamma-based score adjustments
-# - Requires MLOptionTrading to be running (see MLOPTIONTRADING_INTEGRATION.md)
-# - Falls back to standard GEX if MLOptionTrading data unavailable
-#
-# ===== USAGE =====
-# 
-# Set M8C_SYSTEM_COMPLEXITY to:
-# - "simple" for basic testing
-# - "standard" for production (recommended)
-# - "enhanced" for advanced analysis
-#
-# IBKR Notes:
-# 1. Ensure TWS or IB Gateway is running before starting
-# 2. Enable API connections in TWS/Gateway settings
-# 3. Check firewall settings allow connection to IBKR_PORT
-# 4. For live trading, use port 7496 and ensure proper permissions
-# 5. IBKR provides real-time data with accurate Greeks from exchange
+# === ALERT SETTINGS (optional) ===
+# M8C_DISCORD_WEBHOOK=your_discord_webhook_url_here
