Update .env.example with integrated gamma configuration

--- a/.env.example
+++ b/.env.example
@@ -2,23 +2,30 @@
 # Copy this file to .env and update with your settings
 
 # === CORE SYSTEM SETTINGS ===
-M8C_SYSTEM_COMPLEXITY=standard
+M8C_SYSTEM_COMPLEXITY=enhanced
 
-# === GAMMA INTEGRATION SETTINGS (for MLOptionTrading) ===
-# Enable enhanced gamma analysis from MLOptionTrading
+# === INTEGRATED GAMMA ANALYSIS SETTINGS ===
+# Enable integrated gamma analysis (no longer requires MLOptionTrading)
 M8C_ENABLE_ENHANCED_GEX=true
 
-# Path to MLOptionTrading repository (relative or absolute)
-M8C_ML_OPTION_TRADING_PATH=../MLOptionTrading
+# Symbols to analyze for gamma (comma-separated)
+M8C_GAMMA_SYMBOLS=SPX
 
-# Integration mode: file (reads from gamma_adjustments.json) or api (future)
-M8C_GAMMA_INTEGRATION_MODE=file
+# Gamma scheduler mode: once, continuous, scheduled
+M8C_GAMMA_SCHEDULER_MODE=scheduled
 
-# Maximum age for gamma data before refresh (in minutes)
-M8C_GAMMA_MAX_AGE_MINUTES=5
+# Gamma scheduler times (ET) for scheduled mode
+M8C_GAMMA_SCHEDULER_TIMES=10:30,11:00,12:30,14:45
+
+# Gamma scheduler interval (minutes) for continuous mode
+M8C_GAMMA_SCHEDULER_INTERVAL=5
+
+# === LEGACY MLOPTIONTRADING COMPATIBILITY ===
+# Path to MLOptionTrading repository (only if using external files)
+# M8C_ML_OPTION_TRADING_PATH=../MLOptionTrading
 
 # === MARKET DATA SETTINGS ===
-M8C_MARKET_DATA_PROVIDER=yahoo
+M8C_DATA_PROVIDER=yahoo
 M8C_USE_MOCK_DATA=false
 
 # === INTERACTIVE BROKERS SETTINGS ===
