Update .env.example with better documentation for list fields

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,13 @@ M8C_SYSTEM_COMPLEXITY=enhanced
 # Enable integrated gamma analysis (no longer requires MLOptionTrading)
 M8C_ENABLE_ENHANCED_GEX=true
 
-# Symbols to analyze for gamma (comma-separated)
+# Symbols to analyze for gamma (comma-separated, e.g., SPX,SPY,QQQ)
 M8C_GAMMA_SYMBOLS=SPX
 
 # Gamma scheduler mode: once, continuous, scheduled
 M8C_GAMMA_SCHEDULER_MODE=scheduled
 
-# Gamma scheduler times (ET) for scheduled mode
+# Gamma scheduler times (ET) for scheduled mode (comma-separated)
 M8C_GAMMA_SCHEDULER_TIMES=10:30,11:00,12:30,14:45
 
 # Gamma scheduler interval (minutes) for continuous mode
@@ -46,3 +46,9 @@ M8C_CACHE_EXPIRY_MINUTES=5
 
 # === ALERT SETTINGS (optional) ===
 # M8C_DISCORD_WEBHOOK=your_discord_webhook_url_here
+
+# === SUPPORTED SYMBOLS (comma-separated) ===
+# M8C_SUPPORTED_SYMBOLS=SPX,SPY,QQQ,RUT
+
+# === CHECKPOINT TIMES (comma-separated) ===
+# M8C_CHECKPOINT_TIMES=10:00,10:30,11:00,11:30,12:00,12:30,13:00,13:30,14:00,14:30
