Update .env.example to document both JSON array and comma-separated formats

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,15 @@ M8C_SYSTEM_COMPLEXITY=enhanced
 # Enable integrated gamma analysis (no longer requires MLOptionTrading)
 M8C_ENABLE_ENHANCED_GEX=true
 
-# Symbols to analyze for gamma (comma-separated, e.g., SPX,SPY,QQQ)
+# Symbols to analyze for gamma
+# Format: Comma-separated (e.g., SPX,SPY,QQQ) or JSON array (e.g., ["SPX","SPY","QQQ"])
 M8C_GAMMA_SYMBOLS=SPX
 
 # Gamma scheduler mode: once, continuous, scheduled
 M8C_GAMMA_SCHEDULER_MODE=scheduled
 
-# Gamma scheduler times (ET) for scheduled mode (comma-separated)
+# Gamma scheduler times (ET) for scheduled mode
+# Format: Comma-separated (e.g., 10:30,11:00,12:30) or JSON array (e.g., ["10:30","11:00","12:30"])
 M8C_GAMMA_SCHEDULER_TIMES=10:30,11:00,12:30,14:45
 
 # Gamma scheduler interval (minutes) for continuous mode
@@ -47,8 +49,18 @@ M8C_CACHE_EXPIRY_MINUTES=5
 # === ALERT SETTINGS (optional) ===
 # M8C_DISCORD_WEBHOOK=your_discord_webhook_url_here
 
-# === SUPPORTED SYMBOLS (comma-separated) ===
+# === SUPPORTED SYMBOLS ===
+# Format: Comma-separated (e.g., SPX,SPY,QQQ,RUT) or JSON array (e.g., ["SPX","SPY","QQQ","RUT"])
 # M8C_SUPPORTED_SYMBOLS=SPX,SPY,QQQ,RUT
 
-# === CHECKPOINT TIMES (comma-separated) ===
+# === CHECKPOINT TIMES ===
+# Format: Comma-separated or JSON array
+# Examples:
+#   Comma-separated: 10:00,10:30,11:00,11:30,12:00
+#   JSON array: ["10:00","10:30","11:00","11:30","12:00"]
 # M8C_CHECKPOINT_TIMES=10:00,10:30,11:00,11:30,12:00,12:30,13:00,13:30,14:00,14:30
+
+# === STRATEGY THRESHOLDS ===
+# Iron Condor IV Range
+# Format: Comma-separated (e.g., 25,85) or JSON array (e.g., [25,85])
+# M8C_IRON_CONDOR_IV_RANGE=25,85
