Update .env.example to reflect integrated gamma and remove obsolete settings

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@
 M8C_SYSTEM_COMPLEXITY=enhanced
 
 # === INTEGRATED GAMMA ANALYSIS SETTINGS ===
-# Enable integrated gamma analysis (no longer requires MLOptionTrading)
+# Enhanced gamma analysis is now fully integrated into Magic8-Companion
+# No external dependencies on MLOptionTrading required
 M8C_ENABLE_ENHANCED_GEX=true
 
 # Symbols to analyze for gamma
@@ -22,9 +23,8 @@ M8C_GAMMA_SCHEDULER_TIMES=10:30,11:00,12:30,14:45
 # Gamma scheduler interval (minutes) for continuous mode
 M8C_GAMMA_SCHEDULER_INTERVAL=5
 
-# === LEGACY MLOPTIONTRADING COMPATIBILITY ===
-# Path to MLOptionTrading repository (only if using external files)
-# M8C_ML_OPTION_TRADING_PATH=../MLOptionTrading
+# Max age for gamma data before refresh (minutes)
+M8C_GAMMA_MAX_AGE_MINUTES=5
 
 # === MARKET DATA SETTINGS ===
 M8C_DATA_PROVIDER=yahoo
@@ -64,3 +64,10 @@ M8C_CACHE_EXPIRY_MINUTES=5
 # Iron Condor IV Range
 # Format: Comma-separated (e.g., 25,85) or JSON array (e.g., [25,85])
 # M8C_IRON_CONDOR_IV_RANGE=25,85
+
+# === ADVANCED GAMMA SETTINGS (optional) ===
+# Gamma spot multipliers (JSON format)
+# M8C_GAMMA_SPOT_MULTIPLIERS={"SPX": 10, "RUT": 10, "DEFAULT": 100}
+
+# Gamma regime thresholds (JSON format)
+# M8C_GAMMA_REGIME_THRESHOLDS={"extreme": 5e9, "high": 1e9, "moderate": 500e6}
