Implement Phase 2 ML scheduler

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,12 @@ M8C_CACHE_EXPIRY_MINUTES=5
 
 # Gamma regime thresholds (JSON format)
 # M8C_GAMMA_REGIME_THRESHOLDS={"extreme": 5e9, "high": 1e9, "moderate": 500e6}
+
+# === PHASE 2: REAL-TIME ML SETTINGS ===
+M8C_ENABLE_ML_INTEGRATION=true
+M8C_ML_WEIGHT=0.35
+M8C_ML_PATH=../MLOptionTrading
+M8C_ENABLE_ML_5MIN=true
+M8C_ML_5MIN_INTERVAL=5
+M8C_ML_5MIN_CONFIDENCE_THRESHOLD=0.65
+M8C_ML_5MIN_MERGE_STRATEGY=overlay
